ihwa/cluster-scope/fleet-validating-webhook-configuration.validatingwebhookconfiguration.admissionregistration.k8s.io.yaml
# Source: alloydbomni-operator/charts/alloydbomni-operator-fleet/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: alloydb-omni-system/fleet-serving-cert
  name: fleet-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: fleet-webhook-service
      namespace: alloydb-omni-system
      path: /validate-alloydbomni-dbadmin-goog-v1-backup
  failurePolicy: Fail
  name: vbackup.alloydbomni.dbadmin.goog
  rules:
  - apiGroups:
    - alloydbomni.dbadmin.goog
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: fleet-webhook-service
      namespace: alloydb-omni-system
      path: /validate-alloydbomni-dbadmin-goog-v1-backupplan
  failurePolicy: Fail
  name: vbackupplan.alloydbomni.dbadmin.goog
  rules:
  - apiGroups:
    - alloydbomni.dbadmin.goog
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupplans
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: fleet-webhook-service
      namespace: alloydb-omni-system
      path: /validate-alloydbomni-dbadmin-goog-v1-dbcluster
  failurePolicy: Fail
  name: vdbcluster.alloydbomni.dbadmin.goog
  rules:
  - apiGroups:
    - alloydbomni.dbadmin.goog
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - dbclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: fleet-webhook-service
      namespace: alloydb-omni-system
      path: /validate-alloydbomni-dbadmin-goog-v1-restore
  failurePolicy: Fail
  name: vrestore.alloydbomni.dbadmin.goog
  rules:
  - apiGroups:
    - alloydbomni.dbadmin.goog
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - restores
  sideEffects: None
